--- a/css/confirmation.css
+++ b/css/confirmation.css
@@ -17,6 +17,25 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'DIN';
+  font-weight: 200;
+  src: url("../font/dinl____.eot");
+  src: url("../font/dinl____.eot") format('embedded-opentype'), url("../font/dinl____.woff") format('woff'), url("../font/dinl____.ttf") format('truetype'), url("../font/dinl____.svg#DINLightRegular") format('svg');
+}
+@font-face {
+  font-family: 'DIN';
+  font-weight: 400;
+  src: url("../font/dinm____.eot");
+  src: url("../font/dinm____.eot") format('embedded-opentype'), url("../font/dinm____.woff") format('woff'), url("../font/dinm____.ttf") format('truetype'), url("../font/dinm____.svg#DINMediumRegular") format('svg');
+}
+@font-face {
+  font-family: 'Clarendon';
+  src: url("../font/clarendonltstd-webfont.eot");
+  src: url("../font/clarendonltstd-webfont.eot?#iefix") format('embedded-opentype'), url("../font/clarendonltstd-webfont.woff") format('woff'), url("../font/clarendonltstd-webfont.ttf") format('truetype'), url("../font/clarendonltstd-webfont.svg#clarendon_lt_stdregular") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 html,
 body,
 div,
@@ -115,15 +134,12 @@ html {
 body {
   width: 100%;
   height: 100%;
-  color: #fff;
+  color: #272727;
   font-family: DIN;
   font-weight: 200;
   font-size: 22px;
   line-height: 1.4;
-  background-image: url("/img/confirmation-background.jpg");
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
+  background: #fff;
 }
 a {
   text-decoration: none;
@@ -151,7 +167,7 @@ h6 {
   font-weight: normal;
 }
 h1 {
-  font-family: Clarendon;
+  font-family: DIN;
   font-size: 102px;
   text-shadow: 1px 2px 0px #000;
   margin-bottom: 0;
@@ -254,7 +270,6 @@ header {
   margin-bottom: 15px;
   padding-top: 0px;
   font-size: 60px;
-  color: #fff;
 }
 #subtitle {
   font-size: 50px;
@@ -273,18 +288,37 @@ header {
   margin-left: 10%;
 }
 .button {
-  display: inline-block;
-  width: 100%;
-  margin: 25px;
-  padding: 15px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
+  text-transform: uppercase;
+  background: rgba(39,39,39,0.2);
   color: #fff;
-  font-size: 26px;
-  text-align: center;
-  vertical-align: center;
-  background-color: #fff;
-  line-height: 100%;
+  padding: 8px 18px;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-transition: background 0.2s;
+  -moz-transition: background 0.2s;
+  -o-transition: background 0.2s;
+  -ms-transition: background 0.2s;
+  transition: background 0.2s;
+  font-weight: 200;
+  padding: 15px;
+  margin: 25px;
+  width: 100%;
+  font-size: 1.5rem;
+  -webkit-border-radius: 40px;
+  border-radius: 40px;
+}
+.button:hover {
+  background: rgba(39,39,39,0.5);
+}
+.button.disabled {
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.4;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+  filter: alpha(opacity=40);
+}
+.button.block {
+  display: block;
 }
 .button i {
   display: inline-block;
@@ -308,7 +342,7 @@ header {
   border-bottom: none;
 }
 .button-small {
-  width: 250px;
+  width: 270px;
 }
 .button-large {
   width: 400px;
