--- a/css/master.css
+++ b/css/master.css
@@ -293,6 +293,11 @@ body {
   line-height: 1.3;
   -webkit-font-smoothing: antialiased;
 }
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 p {
   margin: 1rem 0;
 }
@@ -330,6 +335,12 @@ hr {
   outline: 0px;
   text-align: left;
   margin: 1rem 0px;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  display: none;
+  -webkit-appearance: none;
+  margin: 0;
 }
 .typ-right {
   text-align: right;
@@ -370,11 +381,12 @@ hr {
   color: #fff;
   padding: 8px 18px;
   display: inline-block;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  -ms-transition: all 0.2s;
-  transition: all 0.2s;
+  cursor: pointer;
+  -webkit-transition: background 0.2s;
+  -moz-transition: background 0.2s;
+  -o-transition: background 0.2s;
+  -ms-transition: background 0.2s;
+  transition: background 0.2s;
 }
 .button:hover {
   background: rgba(0,0,0,0.5);
@@ -385,9 +397,20 @@ hr {
   -webkit-border-radius: 28px;
   border-radius: 28px;
 }
+.button.disabled {
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.4;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+  filter: alpha(opacity=40);
+}
+.button.block {
+  display: block;
+}
 .action_link {
   text-transform: uppercase;
   border-bottom: 1px solid rgba(255,255,255,0.3);
+  margin: 0px 25px;
 }
 .action_link:hover {
   border-bottom-color: #fff;
@@ -439,6 +462,14 @@ hr {
 }
 .box.slate a:hover {
   border-bottom-color: #1c9be6;
+}
+.box.slate .button {
+  border: none;
+  background: #1c9be6;
+  color: #fff;
+}
+.box.slate .button:hover {
+  background: rgba(28,155,230,0.7);
 }
 .box.white {
   background: #fff;
@@ -523,7 +554,7 @@ hr {
   margin-top: 0.5rem;
 }
 .header a.button {
-  margin: 10px 0;
+  margin: 10px 10px;
 }
 .sponsors .sponsors-row {
   margin-bottom: 1%;
@@ -545,6 +576,392 @@ hr {
 .sponsors .sponsors-row >div img {
   width: 90%;
   height: auto;
+}
+/* Animations */
+.spin {
+  -webkit-animation: spin 1s linear infinite;
+  -moz-animation: spin 1s linear infinite;
+  -o-animation: spin 1s linear infinite;
+  -webkit-animation: spin 1s linear infinite;
+  -moz-animation: spin 1s linear infinite;
+  -o-animation: spin 1s linear infinite;
+  -ms-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+  -webkit-transform-origin: 50% 58%;
+  -webkit-transform-origin: 50% 58%;
+  -moz-transform-origin: 50% 58%;
+  -o-transform-origin: 50% 58%;
+  -ms-transform-origin: 50% 58%;
+  transform-origin: 50% 58%;
+  -ms-transform-origin: 50% 58%;
+/* IE 9 */
+}
+@-moz-keyframes spin {
+  0% {
+    -moz-transform: rotate(0deg);
+  }
+
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+.modal-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  background: rgba(28,155,230,0.7);
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  max-width: 630px;
+  min-width: 320px;
+  height: auto;
+  z-index: 2000;
+  visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -o-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  overflow: hidden;
+}
+.modal .modal-content {
+  position: relative;
+  text-align: center;
+  padding: 30px 25px;
+  width: 100%;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
+  -o-transform: scale(0.7);
+  -ms-transform: scale(0.7);
+  transform: scale(0.7);
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.modal .modal-content .register-step-1 {
+  position: absolute;
+  display: block;
+  width: 100%;
+  -webkit-transition: right 1s;
+  -moz-transition: right 1s;
+  -o-transition: right 1s;
+  -ms-transition: right 1s;
+  transition: right 1s;
+}
+.modal .modal-content .register-step-2 {
+  position: absolute;
+  display: block;
+  width: 100%;
+  -webkit-transition: left 1s;
+  -moz-transition: left 1s;
+  -o-transition: left 1s;
+  -ms-transition: left 1s;
+  transition: left 1s;
+}
+.modal .modal-content .register-step-2 .text {
+  display: block;
+  width: 70%;
+  margin: auto;
+  margin-bottom: 30px;
+  font-size: 17px;
+}
+.modal .modal-content .register-step-2 a.button {
+  width: 50%;
+  margin: auto;
+  margin-top: 20px;
+}
+.modal .modal-content.step-1 {
+  height: 450px;
+}
+.modal .modal-content.step-1 .register-step-1 {
+  right: 0;
+}
+.modal .modal-content.step-1 .register-step-2 {
+  left: 110%;
+}
+.modal .modal-content.step-2 {
+  height: 280px;
+}
+.modal .modal-content.step-2 .register-step-1 {
+  right: 110%;
+}
+.modal .modal-content.step-2 .register-step-2 {
+  left: 0;
+}
+.modal .modal-content.slide-left {
+  right: 100%;
+}
+.modal .modal-content .modal-title {
+  display: block;
+  font-size: 2rem;
+  margin-bottom: 25px;
+}
+.modal .modal-content .show-discount {
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin: -35px 15px;
+  cursor: pointer;
+}
+.modal .modal-content .close-modal {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: -1px 17px;
+  cursor: pointer;
+  font-size: 50px;
+}
+.modal .modal-content .close-modal:hover,
+.modal .modal-content .close-modal:active {
+  color: #8c8c8c;
+}
+.modal .modal-content .register-form .charge-text {
+  margin: 20px auto;
+}
+.modal .modal-content .register-form .button-container {
+  width: 100%;
+  display: block;
+  margin-top: 20px;
+  text-align: center;
+}
+.modal .modal-content .register-form .button-container a.button {
+  width: 200px;
+}
+.modal .modal-content .register-form .button-container a.button.success {
+  background-color: #00b900;
+}
+.modal .modal-content .register-form .button-container a.button.fail {
+  background-color: #ff4040;
+}
+.modal .modal-content .register-form .button-container a.button.has-icon {
+  font-size: 20px;
+  pointer-events: none;
+  cursor: default;
+}
+.modal .modal-content .register-form .button-container a.button.has-icon i {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+}
+.modal .modal-content .register-form .input-error-text {
+  display: none;
+  marign: auto;
+  margin-top: -5px;
+  margin-bottom: 5px;
+  font-size: 14px;
+  text-align: center;
+  color: #ff4d4d;
+}
+.modal .modal-content .register-form .input-error-text.show {
+  display: block;
+}
+.modal .modal-content .register-form .input-container {
+  display: block;
+  margin: 10px auto;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  text-align: center;
+  background: #4c4e50;
+  width: 50%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0px 35px;
+}
+.modal .modal-content .register-form .input-container input {
+  width: 90%;
+  height: 35px;
+  font-size: 15px;
+  background: #4c4e50;
+  color: #fff;
+  border: none;
+  padding: 2px;
+  outline: none;
+}
+.modal .modal-content .register-form .input-container i {
+  display: inline-block;
+  width: 25px;
+  font-size: 24px;
+  padding-top: 6px;
+  line-height: 25px;
+}
+.modal .modal-content .register-form .input-container i.left {
+  float: left;
+  padding-left: 5px;
+  margin-left: -32px;
+}
+.modal .modal-content .register-form .input-container i.right {
+  float: right;
+  padding-right: 5px;
+  margin-right: -32px;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.5s;
+  -moz-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  -ms-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+}
+.modal .modal-content .register-form .input-container i.input-check {
+  color: #00f300;
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
+.modal .modal-content .register-form .input-container i.input-error {
+  color: #ff4d4d;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+}
+.modal .modal-content .register-form .input-container i.card {
+  width: 32px;
+  height: 17px;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-top: 7px;
+  margin-right: -28px;
+}
+.modal .modal-content .register-form .input-container i.card.visa {
+  background-image: url("/img/cards/visa.png");
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
+.modal .modal-content .register-form .input-container i.card.mastercard {
+  background-image: url("/img/cards/mastercard.png");
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
+.modal .modal-content .register-form .input-container i.card.jcb {
+  background-image: url("/img/cards/jcb.png");
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
+.modal .modal-content .register-form .input-container i.card.dinersclub {
+  background-image: url("/img/cards/diners.png");
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
+.modal .modal-content .register-form .input-container i.card.amex {
+  background-image: url("/img/cards/amex.png");
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
+.modal .modal-content .register-form .input-container i.card.pe-7s-check {
+  margin-top: 0;
+  margin-right: -32px;
+}
+.modal .modal-content .register-form .input-container.error i.input-error {
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
+.modal .modal-content .register-form .input-container.error i.input-check {
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+}
+.modal .modal-content .register-form .input-container.empty i.input-check {
+  display: none;
+}
+.modal .modal-content .register-form .input-container.hidden {
+  display: none;
+}
+.modal .modal-content .register-form .input-container.credit-card {
+  padding: 0;
+}
+.modal .modal-content .register-form .input-container.credit-card .input-container {
+  width: 100%;
+  margin: 0px;
+  border-bottom: 1px solid #36383a;
+  -webkit-border-radius: 0px;
+  border-radius: 0px;
+}
+.modal .modal-content .register-form .input-container.credit-card .input-container.half {
+  width: 49.8%;
+  display: inline-block;
+  margin: 0px;
+  border-bottom: 0px;
+  padding-left: 40px;
+}
+.modal .modal-content .register-form .input-container.credit-card .input-container.half input {
+  width: 90%;
+}
+.modal .modal-content .register-form .input-container.credit-card .input-container.half i.left {
+  padding-left: 3px;
+  margin-left: -35px;
+}
+.modal .modal-content .register-form .input-container.credit-card .input-container.half i.right {
+  padding-right: 3px;
+  margin-right: -32px;
+}
+.modal .modal-content .register-form .input-container.credit-card .input-container.half:last-child {
+  border-left: 1px solid #36383a;
+}
+.modal.show {
+  visibility: visible;
+}
+.modal.show ~ .modal-overlay {
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+  visibility: visible;
+}
+.modal.show .modal-content {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -o-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
 }
 @media (max-width: 900px) {
   html {
@@ -784,5 +1201,109 @@ hr {
   .mobile-12 {
     position: relative;
     width: 100% !important;
+  }
+  .modal {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -o-transform: none;
+    -ms-transform: none;
+    transform: none;
+  }
+  .modal .modal-content .modal-title {
+    font-size: 1.8rem;
+  }
+  .modal .modal-content .register-form .input-container {
+    width: 80%;
+  }
+}
+@-moz-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-o-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-ms-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
