--- a/css/complete.css
+++ b/css/complete.css
@@ -68,6 +68,8 @@ textarea:focus {
   font-size: 1.5rem;
   -webkit-border-radius: 28px;
   border-radius: 28px;
+  margin-right: 15%;
+  margin-left: 15%;
 }
 .button.disabled {
   pointer-events: none;
