--- a/complete.jade
+++ b/complete.jade
@@ -14,6 +14,7 @@ html
 					| If that doesn't work, send us an email at
 					a.email-link(href="mailto:fly@gopilot.org")  fly@gopilot.org
 					|  and we'll help fix it.
+					| (You may have already completed this.)
 
 		.content
 			h1.title Complete your #{title} Registration
