--- a/index.jade
+++ b/index.jade
@@ -78,7 +78,7 @@ html
                         p #{title} will help you learn how to create real products in one action-packed & incredibly fun #{hours_long} hour event.
                     p: a.button.large.js-register Register Now >
                     p
-                        a.action_link(href=sponsor_doc) Want to sponsor? >
+                        a.action_link(href="mailto:fly@gopilot.org?Subject=#{title} sponsorship") Want to sponsor? >
                         a.action_link(href="/mentors.html") Want to mentor? > 
                     //p: a.action_link(href=register_link) Get notified when registration opens >
             .row
