added mashery logo

--- a/index.jade
+++ b/index.jade
@@ -125,8 +125,10 @@ html
 
             .box.white.span-9.mobile-full
                 .sponsors-row
-                    .span-6.mobile-6.push-3
+                    .span-6.mobile-6
                         a(href="http://www.streetcodeacademy.org/"): img(src="/img/streetcode.png")
+                    .span-6.mobile-6
+                        a(href="http://www.mashery.com/"): img(src="/img/mashery.png")
         
             .section.schedule.large#schedule
                 .box.title.blue.span-3
