--- a/index.jade
+++ b/index.jade
@@ -129,6 +129,15 @@ html
                         a(href="http://www.streetcodeacademy.org/"): img(src="/img/streetcode.png")
                     .span-6.mobile-6
                         a(href="http://www.mashery.com/"): img(src="/img/mashery.png")
+                .sponsors-row
+                    .span-3.mobile-3
+
+                    .span-3.mobile-3
+                        a(href="http://www.makegameswithus.com/"): img(src="/img/makegames.png")
+                    .span-3.mobile-3
+                        a(href="http://dschool.stanford.edu/"): img(src="/img/dschool.png")
+                    .span-3.mobile-3
+                    
         
             .section.schedule.large#schedule
                 .box.title.blue.span-3
